# TicTacToe

./: CMakeLists.txt
sources/: board.cpp  board.hpp  main.cpp  sim_player.cpp  sim_player.hpp
